# FFXIV-Combat-Simulator

./: .gitignore  APIRequestTest.json  Enemy.py  FFLogsAPIRequest.py  Fight.py  License.md  List.txt  Plan.txt  Player.py  README.md  Save.JSON  SimulationInput.py  Spell.Py  TUI.py  UI_backend.py  apitest.py  bisSolverResult.txt  examples.py  fflogstest.py  ffxivcalc_layout.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  savesample.json  setup.cfg  t.py  test.py
FFLogsAPI/: RequestTest.py
Jobs/: Base_Player.py  Base_Spell.py  BlackMage_Player.py  BlackMage_Spell.py  DarkKnight_Player.py  DarkKnight_Spell.py  Machinist_Player.py  Machinist_Spell.py  Ninja_Player.py  Ninja_Spell.py  Redmage_Player.py  Redmage_Spell.py  Samurai_Player.py  Samurai_Spell.py  Scholar_Player.py  Scholar_Spell.py  Warrior_Player.py  Warrior_Spell.py  Whitemage_Player.py  Whitemage_Spell.py
OldStuff/: Astrologian_Player.py  Base_Player.py  BlackMage_Player.py  Caster_Player.py  Melee_Player.py  Ninja_Player.py  Ninja_Spell.py  Player.py  Redmage_Player.py  Scholar_Player.py  Spell.Py  Summoner_Player.py  Whitemage_Player.py  examples.py  main.py
OtherStuff/: BLMSpell.txt  Plan.txt  test.py
ffxivcalc/: Enemy.py  FFLogsAPIRequest.py  Fight.py  SimulationInput.py  TUI.py  Tester.py  UI_backend.py  Vocal.py  __init__.py  __main__.py  etro_request.py  library.py  requirementHandler.py
ffxivppscalc/: API.py  Enemy.py  FFLogsAPIRequest.py  Fight.py  ObjectInModel.py  ObjectOutModel.py  SimulationInput.py  TUI.py  Tester.py  UI_backend.py  Vocal.py  __main__.py  etro_request.py  hey.json  library.py
saved/: .json  2.json  BLMrun.json  DarkKnight.json  P6S.json  PLD.json  Warrior.json  blackmage.json  p6.json  (+16 more)
(+270 files in other folders)
