[metadata]
name = ffxiv-combat-simulator
version = attr: ffxivppscalc.__version__
author = IAmPythagoras
author_email = contact@todo.com
description = Environment in which the simulation of FF14 combat will be possible.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    Fun Stuff if you're bored*
    OldStuff*
    saved*

[options.package_data]
ffxivppscalc = py.typed

[options.extras_require]
dev = file: requirements.dev.txt
