[metadata]
name = ffxiv-combat-simulator
version = attr: ffxivppscalc.__version__
author = IAmPythagoras
author_email = Discord -> Pythagoras#6312
description = Environment in which the simulation of FF14 combat is possible.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    Fun Stuff if you're bored*
    OldStuff*
    saved*

[options.package_data]
ffxivppscalc = py.typed

[options.extras_require]
dev = file: requirements.dev.txt
